== 0.3.6 (In Git)

With this release you can package your formatters in RubyGems.

=== New features
* New aliases for Vietnamese (Ngoc Dao)
* Automatic require of custom formatters. --require is no longer needed to load them, and they can be in Ruby gems. (Aslak Hellesøy)
* Lazy loading of built-in formatters. Should improve startup time a little bit.

== 0.3.5 2009-05-14

Let's make a new release today because two annoying bugs are fixed.

=== Bugfixes
* Allow feature element names to contain Gherkin keywords as long as they are not the first word on a newline (#319, #307 Joseph Wilk)

== 0.3.4 2009-05-14

A couple of great new features in this release. Running with Rake is faster than before,
and there is a brand new JUnit formatter - great for Continuous Integration reports!

This release was made especially for the Oslo XP Meetup today.

** IMPORTANT UPGRADE NOTES FOR RAILS USERS **

Running Cucumber features in the same Ruby interpreter as Rake doesn't seem to work,
so you have to explicitly tell the task to fork (like it was doing by default in prior
versions). In lib/tasks/cucumber.rake:

  Cucumber::Rake::Task.new(:features) do |t|
    t.fork = true # Explicitly fork
    t.cucumber_opts = %w{--format pretty}
  end

(If you run script/generate cucumber this will be done for you).
Alternatively you can omit forking and run features like this:

  RAILS_ENV=test rake features

However, setting the RAILS_ENV is easy to forget, so I don't recommend relying on this.

=== Bugfixes
* Hooks (World, Before, After) are no longer executed when --dry-run (Aslak Hellesøy)
* Proper UTF8 use in HTML formatter (Herminio Torres)
* Problem with multiple terms in languages.yml (#321 Aslak Hellesøy)

=== New features
* New JUnit formatter (Gareth Jones)
* Support for Vietnamese (Ngoc Dao)
* Added aliases for Feature and But in Japanese (Leonard Chin)
* Support for Catalan (Francesc Esplugas)

=== Changed features